--- a/index.html
+++ b/index.html
@@ -497,6 +497,10 @@
 							<div class="circle" id="circles-4"></div>
 							<h5>Corel Draw</h5>
 						</div>
+						<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center">
+							<div class="circle" id="circles-4"></div>
+							<h5>Corel Draw</h5>
+						</div>
 					</div>
 				</div>
 			</div>
