--- a/index.html
+++ b/index.html
@@ -204,19 +204,7 @@
 										</div>
 									</div>
 								</div>
-								<!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-									<div class="prt_about_experiencebox">
-										<div class="prt_about_experience_year">
-											<h1>2016</h1>
-											<h4>Apr to Present</h4>
-										</div>
-										<div class="prt_about_experience_info">
-											<h4>Lead Ui/Ux Designer</h4>
-											<span>Google</span>
-											<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-										</div>
-									</div>
-								</div> -->
+								 
 							</div>
 						</div>
 					</div>
@@ -541,7 +529,7 @@
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 prt_loadmore">
 						<a class="popup-youtube" href="https://www.youtube.com/watch?v=6yWzKvQXsYM" title="">
 							<div class="prt_portfolio_img">
-								<img src="images/content/port3.jpg" alt="Portfolio">
+								<img src="images/content/BrowserPreview_tmp.gif" alt="Portfolio">
 								<div class="prt_portfolio_text">
 									<h4>Click and open video</h4>
 									<p>video</p>
