--- a/index.html
+++ b/index.html
@@ -463,6 +463,10 @@
 							<div class="circle" id="circles-5"></div>
 							<h5>After Effects</h5>
 						</div>
+						<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center">
+							<div class="circle" id="circles-5"></div>
+							<h5>Xd</h5>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -520,7 +524,7 @@
 							<div class="prt_portfolio_img">
 								<img src="images/content/port2.jpg" alt="Portfolio">
 								<div class="prt_portfolio_text">
-									<h4>Click and open video</h4>
+									<h4>Bottle Packaging Design</h4>
 									<p>video</p>
 								</div>
 							</div>
