--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 							<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-behance" aria-hidden="https://www.behance.net/aneeshmohammed"></i></a></li>
+							<li><a href="https://www.behance.net/aneeshmohammed"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
 						</ul>
