--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 						<div class="prt_profile_slider">
 							<div class="owl-carousel owl-theme">
 								<div class="item">
-									<i class="fa fa-behance pl_clr1" aria-hidden="true"></i>
+									<a href="https://www.behance.net/aneeshmohammed"><i class="fa fa-behance pl_clr1" aria-hidden="true"></i>
 									<h4>Behance</h4>
 								</div>
 								<div class="item">
@@ -689,7 +689,7 @@
 							<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.behance.net/aneeshmohammed"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
 						</ul>
